--- a/quickstart/public/index.css
+++ b/quickstart/public/index.css
@@ -1,18 +1,16 @@
-html, body, section, .container, .columns {
+html, body, section {
   height: 100%;
 }
 .section {
-  padding: 0 1rem;
+  padding: 0;
 }
-.main {
-  height: 100vh;
-  min-height: 320px;
+* {
+  padding: 0;
+  margin: 0;
 }
-.video {
-  display: flex;
+
+.input {
   width: 100%;
-  height: 100vh;
-  justify-content: center;
 }
 .wrapper {
   width: 100%;
@@ -77,7 +75,6 @@ html, body, section, .container, .columns {
   justify-content: center;
   border: none;
   font-size: 1rem;
-  background: cornflowerblue;
   margin-left: 5px;
   padding: 0;
   outline: none;
@@ -147,116 +144,77 @@ html, body, section, .container, .columns {
 .title, .subtitle {
   text-align: center;
 }
-.other.loading-video img {
-  max-width: 100%;
-}
-.other >img {
-  display: none;
-}
-.other.loading-video .video-me, .other.loading-video .video-user {
-  display: none;
-}
-.other {
-  position: relative;
-  height: 100%;
-  max-width: 640px;
-  width: 100%;
-  background-color: red;
-}
 .video-user {
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
   z-index: 10;
   background-color: deepskyblue;
-  display: flex;
+  display: grid;
   align-items: center;
   justify-content: center;
 }
-.other .video-me {
+.video-me {
   position: absolute;
-  bottom: 20px;
-  right: 20px;
-  width: 25%;
-  height: 100px;
   z-index: 11;
   background-color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 1rem;
-}
-
-.other .video-me img {
-  max-width: 100%;
-}
-.me{
-  background: white;
-}
-.me.load {
-  position: relative;
-  max-width: 640px;
-  height: 480px;
-}
-.me.load img {
-  z-index: 10;
-  position: absolute;
-  left: 0;
-  top: 0;
-  max-width: 100%;
-}
-.me.load .video-me {
-  z-index: 11;
   width: 25%;
-  height: 100px;
-}
-.me.load .video-me img {
-  max-width: 100%;
-  display: block;
+  height: 20%;
+  right: 0;
+  bottom: 0;
+  display: grid;
+  align-items: center;
+  justify-items: center;
 }
 .text {
   text-align: center;
   color: greenyellow;
 }
-#videoGroup {
-  display: flex;
+/*    css grid */
+.container {
+  display: grid;
+  height: 100vh;
+  grid-template-columns: 1fr;
+  grid-template-rows: minmax(50px, max-content) 1fr minmax(50px, max-content);
+}
+.header {
+  background: gray;
+  display: grid;
   align-items: center;
-  justify-content: center;
-  max-width: 640px;
-  height: 50px;
-  margin-top: 10px;
-  width: 100%;
+  justify-items: center;
 }
-#btnVideo {
-  height: 40px;
-  font: 400 12px Arial;
-  color: green;
-  background: lightgray;
-  padding: 0 20px;
-  box-shadow: none;
-  outline: none;
+.footer {
+  background: grey;
+  display: grid;
+  align-items: center;
+  justify-items: center;
 }
-iframe {
+.columns {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: min-content 1fr min-content;
+  font-size: 20px;
+}
+.column-4 {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: minmax(240px, 1fr);
+  position: relative;
+}
+.column-1, .column-2 {
+  background: darkseagreen;
+}
+.column-2 {
+  height: 200px;
+}
+.column-2 img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
-@media (max-width: 767px) and (orientation: landscape) {
-  .other .video-me {
-    width: 15%;
+@media screen and (min-width: 700px){
+  .columns {
+    grid-template-columns: minmax(100px,1fr) 3fr minmax(100px, 1fr);
+    grid-template-rows: 1fr;
   }
-  #videoGroup {
-    height: 25px;
-    margin-top: 5px;
-  }
-  #btnVideo {
-    height: 100%;
-  }
-}
-@media (max-width: 425px) and (orientation: landscape) {
-  .other .video-me {
-    width: 70px;
-    height: 70px;
+  .column-2 {
+    height: auto;
   }
 }
